Fixed the transmit icon. Also fixed the layout when it was visible.

--- a/html/css/main.css
+++ b/html/css/main.css
@@ -67,6 +67,7 @@ h3, h4 { /* Headers & Footer in Center & East panes */
 
 #poll-indicator {
     display:none;
+	vertical-align:middle;
 }
 /*}}}*/
 
